# autothink

./: .gitignore  LICENSE  README.md  benchmark.py  pyproject.toml
.github/workflows/: tests.yml
autothink/: __init__.py
autothink/core/: __init__.py  advanced.py  autothink_safe.py  autothink_v2.py  autothink_v3.py  autothink_v4.py  feature_engineering_general.py  feature_engineering_v2.py  kaggle_beast.py  kaggle_fast.py  meta_learning.py  preprocessing.py  production.py  validation.py
examples/: README.md  benchmark.py  kaggle_competition.py  quickstart.py
tests/: test_fit.py  test_preprocessing.py  test_task_detection.py  test_validation.py
